--- a/src/templates/projects/underconstruction.html
+++ b/src/templates/projects/underconstruction.html
@@ -15,7 +15,7 @@
 <body>
 <div class="container">
     <div class="jumbotron">
-        <h3>site under construction...</h3>
+        <h3>website under construction...</h3>
     </div>
 </div>
 </body>
