--- a/src/templates/projects/underconstruction.html
+++ b/src/templates/projects/underconstruction.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load staticfiles %}
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -9,7 +10,9 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
-    <title>Gabriel Ionescu</title>
+
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.png' %}"/>
+    <title>Welcome!</title>
 </head>
 
 <body>
