--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Test image form</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
+{% block title %}New Project{% endblock %}
+
+{% block content %}
 <form id="post_form" method="post" action="" enctype="multipart/form-data">
 
     {% csrf_token %}
@@ -22,9 +19,6 @@
         {{ form }} <br>
     {% endfor %}
 
-
     <input type="submit" name="submit" value="Submit" />
 </form>
-
-</body>
-</html>
+{% endblock %}
