--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -17,6 +17,7 @@
 
 <body>
 <div class="container-fluid">
+    {% include 'snippets/nav.html' %}
     {% block content %}{% endblock %}
 </div>
 </body>
