--- a/src/templates/projects/underconstruction.html
+++ b/src/templates/projects/underconstruction.html
@@ -1,25 +1,11 @@
-<!DOCTYPE html>
-{% load staticfiles %}
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <!--Bootstrap 4.1.3-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-          crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-            integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-            crossorigin="anonymous"></script>
+{% extends 'base.html' %}
 
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon/favicon.png' %}"/>
-    <title>Welcome!</title>
-</head>
+{% block title %}Main Page{% endblock %}
 
-<body>
+{% block content %}
 <div class="container">
     <div class="jumbotron">
         <h3>website under construction...</h3>
     </div>
 </div>
-</body>
-</html>
+{% endblock %}
