deleted unused imports

--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -13,7 +13,9 @@
     {% for field in projectForm %}
         {{ field.label }}: {{ field }}
         {% if field.errors %}
-            {{ field.errors|escape }}<br>
+            <div class="text-muted">
+                <small style="color:red">{{ field.errors|escape }}<br></small>
+            </div>
         {% endif %}
         <br>
     {% endfor %}
