--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -25,6 +25,6 @@
         {{ form }} <br>
     {% endfor %}
 
-    <input type="submit" name="submit" value="Submit" />
+    <input type="submit" name="submit" value="Create" />
 </form>
 {% endblock %}
