--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -10,11 +10,14 @@
                 <a class="nav-link" href="/admin">Admin Page</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'create_project' %}">Create Project</a>
+                <a class="nav-link" href="{% url 'projects:list' %}">Projects list</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'projects:create' %}">Create Project</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">___</a>
-            </li>
+                </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">___</a>
             </li>
