--- a/src/templates/projects/detail_project.html
+++ b/src/templates/projects/detail_project.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
-{% block title %}Update Project{% endblock %}
+{% block title %}Detail Project{% endblock %}
 
 {% block content %}
     <form>
@@ -12,7 +13,7 @@
                 <div class="row">
                     {% for imag in object.images_set.all %}
                         <span class="col-sm-4">
-                            <img src="{{ imag.image.url }}" alt="{{ imag.image.url }}">
+                            <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
                         </span>
                     {% endfor %}
 
