--- a/src/templates/projects/update_project.html
+++ b/src/templates/projects/update_project.html
@@ -4,19 +4,10 @@
 
 {% block content %}
     {% if user.is_authenticated %}
-        <form>
+        <form method="POST">
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" name="submit" value="Update" />
         </form>
-
-    {% else %}
-        <form>
-            {% csrf_token %}
-            <ul class="unstyled">
-                <li>Title: {{ form.instance.title }}</li>
-                <li>Description: {{ form.instance.description }}</li>
-            </ul>
-    </form>
     {% endif %}
 {% endblock %}
