made create project cleaner

--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -7,8 +7,8 @@
         <strong>
             <a style="color: #279bbe" href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
         </strong>
-        <p>
-            Position: {{ obj.position }}
+        <p class="text-muted">
+            <small>Pos: {{ obj.position }}</small>
         </p>
         <p>
             Description: {{ obj.description }}
