--- a/src/templates/projects/detail_project.html
+++ b/src/templates/projects/detail_project.html
@@ -21,6 +21,8 @@
         </ul>
     </form>
     {% if user.is_authenticated %}
-        <a href="{% url 'projects:update' object.slug %}">Update project</a>
+        <a class="btn btn-danger" href="{% url 'projects:update' object.slug %}">Update project</a>
+        <hr>
     {% endif %}
+    <a class="btn btn-info" href="{% url 'projects:list' %}">Back</a>
 {% endblock %}
