images: delete, delete file, delete empty folder; project: delete, delete images. all from admin for now

--- a/src/templates/projects/project_create.html
+++ b/src/templates/projects/project_create.html
@@ -3,6 +3,8 @@
 {% block title %}New Project{% endblock %}
 
 {% block content %}
+    <br>
+    <h3>Create Project</h3>
 <form id="post_form" method="post" action="" enctype="multipart/form-data">
 
     {% csrf_token %}
