--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -10,10 +10,10 @@
                 <a class="nav-link" href="/admin">Admin Page</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'projects:list' %}">Projects list</a>
+                <a class="nav-link" href="{% url 'projects:project_list' %}">Projects list</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'projects:create' %}">Create Project</a>
+                <a class="nav-link" href="{% url 'projects:project_create' %}">Create Project</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">___</a>
