--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -1,38 +1,40 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
-{% load static %}
 
 {% block title %}Projects{% endblock %}
 
 {% block content %}
     <br>
-    {% for obj in object_list %}
-        <div class="row">
-            <div class="col-sm-4">
-                <strong>
-                    <a style="color: #279bbe" href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
-                </strong>
-                <p class="text-muted">
-                    <small>Position: {{ obj.position }}</small>
-                </p>
-                <p>
-                    Description: {{ obj.description }}
-                </p>
-            </div>
+    {% if object_list %}
+        {% for obj in object_list %}
+            <div class="row">
+                <div class="col-sm-4">
+                    <strong>
+                        <a style="color: #279bbe" href="{{ obj.get_absolute_url }}">{{ obj.title }}</a>
+                    </strong>
+                    <p class="text-muted">
+                        <small>Position: {{ obj.position }}</small>
+                    </p>
+                    <p>
+                        Description: {{ obj.description }}
+                    </p>
+                </div>
 
-            <div class="col-sm-8">
-                <div class="row">
-                    {% for imag in obj.images_set.all %}
-                        <span class="col-sm-2">
-                            <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
-                        </span>
-                    {% endfor %}
+                <div class="col-sm-8">
+                    <div class="row">
+                        {% for imag in obj.images_set.all %}
+                            <span class="col-sm-2">
+                                <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
+                            </span>
+                        {% endfor %}
+                    </div>
                 </div>
             </div>
-        </div>
+            <hr>
+        {% endfor %}
+    {% else %}
+        <h3>No projects yet</h3>
 
-        <hr>
-
-    {% endfor %}
+    {% endif %}
 
 {% endblock %}
