--- a/src/templates/projects/project_update.html
+++ b/src/templates/projects/project_update.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <br>
+    <h3>Update Project</h3>
     {% if user.is_authenticated %}
         <form method="POST">
             {% csrf_token %}
@@ -15,17 +16,19 @@
                 </span>
             {% endfor %}
 
-            <input class="btn btn-success btn-sm" type="submit" name="submit" value="Update" />
-            <a class="btn btn-danger btn-sm" href="{% url 'projects:detail' slug=object.slug %}">Cancel</a>
+            <input class="btn btn-success btn-sm" type="submit" name="update" value="Update" />
+            <a class="btn btn-danger btn-sm" href="{% url 'projects:project_detail' slug=object.slug %}">Cancel</a>
         </form>
         <hr>
-        <a class="btn btn-warning btn-sm" href="#">Update images</a>
         <br><br>
         <div class="row">
             {% for imag in object.images_set.all %}
                 <span class="col-sm-2">
                     <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
                 </span>
+
+
+
             {% endfor %}
         </div>
 
