images: delete: view, template

--- a/src/templates/projects/project_delete.html
+++ b/src/templates/projects/project_delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title %}Projects{% endblock %}
+{% block title %}Delete project{% endblock %}
 
 {% block content %}
     <br>
