--- a/src/templates/projects/project_create.html
+++ b/src/templates/projects/project_create.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+{% load crispy_forms_tags %}
 
 {% block title %}New Project{% endblock %}
 
@@ -6,27 +8,21 @@
     <br>
     <h3>Create Project</h3>
 <form id="post_form" method="post" action="" enctype="multipart/form-data">
-
     {% csrf_token %}
     {% for hidden in postForm.hidden_fields %}
         {{ hidden }}
     {% endfor %}
-
-    {% for field in projectForm %}
-        {{ field.label }}: {{ field }}
-        {% if field.errors %}
-            <div class="text-muted">
-                <small style="color:red">{{ field.errors|escape }}<br></small>
-            </div>
-        {% endif %}
-        <br>
-    {% endfor %}
-    <br>
-    {{ formset.management_form }}
-    {% for form in formset %}
-        {{ form }} <br>
-    {% endfor %}
-
+    <div class="row">
+        <div class="col-md-6">
+            {{ projectForm|crispy }}
+        </div>
+        <div class="col-md-6">
+            {{ formset.management_form }}
+            {% for form in formset %}
+                {{ form|crispy }} <br>
+            {% endfor %}
+        </div>
+    </div>
     <input type="submit" name="submit" value="Create" />
 </form>
 {% endblock %}
