--- a/src/templates/projects/image_create.html
+++ b/src/templates/projects/image_create.html
@@ -7,9 +7,11 @@
 {% block content %}
     <br>
     <h3>Create Image</h3>
-    <form id="post_form" method="post" action="" enctype="multipart/form-data">
+    <form id="post_form" method="post">
         {% csrf_token %}
         {{ form|crispy }}
         <input type="submit" name="submit" value="Add image" />
     </form>
+    <a class="btn btn-danger btn-sm" href="{% url 'projects:project_update' view.kwargs.slug %}">Cancel</a>
+
 {% endblock %}
