CV: add, list; upgraded django version; fixed image file upload

--- a/src/templates/projects/project_list.html
+++ b/src/templates/projects/project_list.html
@@ -5,6 +5,8 @@
 
 {% block content %}
     <br>
+    <h3>Projects</h3>
+    <br>
     {% if object_list %}
         {% for obj in object_list %}
             <div class="row">
