--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -16,8 +16,11 @@
                 <a class="nav-link" href="{% url 'projects:project_create' %}">Create Project</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">___</a>
-                </li>
+                <a class="nav-link" href="{% url 'projects:cv_list' %}">CV List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'projects:cv_create' %}">Add CV</a>
+            </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">___</a>
             </li>
