--- a/src/templates/projects/cv_create.html
+++ b/src/templates/projects/cv_create.html
@@ -2,16 +2,15 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Image{% endblock %}
+{% block title %}New CV{% endblock %}
 
 {% block content %}
     <br>
-    <h3>Create Image</h3>
+    <h3>Add CV</h3>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form|crispy }}
-        <input type="submit" name="submit" value="Add image" />
+        <input class="btn btn-success" type="submit" name="submit" value="Add CV" />
+        <a class="btn btn-danger " href="{% url 'projects:cv_list' %}">Cancel</a>
     </form>
-    <a class="btn btn-danger btn-sm" href="{% url 'projects:project_update' view.kwargs.slug %}">Cancel</a>
-
 {% endblock %}
