--- a/src/templates/projects/cv_delete.html
+++ b/src/templates/projects/cv_delete.html
@@ -2,14 +2,22 @@
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
-{% block title %}New CV{% endblock %}
+{% block title %}Delete CV{% endblock %}
 
 {% block content %}
     <br>
-    <h3>Add CV</h3>
-    <form method="post">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-danger" type="submit" name="submit" value="Delete CV" />
-    </form>
+    <h3>Delete CV</h3>
+    <br>
+    {% if user.is_authenticated %}
+        <form method="POST">
+            {% csrf_token %}
+            <strong>{{ object }}</strong>
+            <br>
+            <spam>
+                Are you sure you want to delete this CV?
+                <input class="btn btn-danger" type="submit" value="Yes, I am sure">
+                <a class="btn btn-warning" href="{% url 'projects:cv_list' %}">Cancel</a>
+            </spam>
+        </form>
+    {% endif %}
 {% endblock %}
