--- a/src/templates/projects/cv_list.html
+++ b/src/templates/projects/cv_list.html
@@ -7,28 +7,33 @@
 {% block content %}
     <br>
     <h3>CV List</h3>
+    {% if no_download %}
+        <h1 style="color: red"><strong>{{ no_download }}</strong></h1>
+    {% endif %}
     <br>
+    {% if user.is_authenticated %}
+        <a class="btn btn-success" href="{% url 'projects:cv_create' %}">Add CV</a>
+        <br><br>
+    {% endif %}
     {% if object_list %}
         {% for obj in object_list %}
             <div class="row">
                 <div class="col-sm-4">
-                    <strong>
-                        <a style="color: #279bbe" href="{{ obj.get_absolute_url }}">{{ obj }}</a>
-                    </strong>
+                    <strong>{{ obj }}</strong>
+                    <br><a class="btn btn-info btn-sm" href="{% url 'projects:cv_update' pk=obj.pk %}">Update CV</a><br>
+
                     <p class="text-muted">
-                        <small>Created: {{ obj.created }}</small>
+                        <small>Created: {{ obj.created|date:'d M Y - H:i' }}</small>
                     </p>
                     <p>
                         Visible: {{ obj.visible }}
                     </p>
+                    <p><a href="{{ obj.document.url }}">Download</a></p>
+                    <a class="btn btn-danger btn-sm" href="{{ obj.get_absolute_url }}">Delete CV</a>
                 </div>
             </div>
             <hr>
         {% endfor %}
-        {% if user.is_authenticated %}
-            <a class="btn btn-success " href="{% url 'projects:cv_create' %}">Add CV</a>
-        {% endif %}
-
 
     {% else %}
         <h4>No CV yet</h4>
