--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'home' %}">Home</a>
     <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
         <span class="navbar-toggler-icon"></span>
@@ -21,10 +21,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'projects:cv_create' %}">Add CV</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">___</a>
-            </li>
         </ul>
+
         <div class="form-inline my-2 my-lg-0">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
