--- a/src/templates/projects/home.html
+++ b/src/templates/projects/home.html
@@ -9,14 +9,11 @@
 
 {% block content %}
 
-    <div class="d-flex align-items-center flex-column" style="margin: 4em;">
+    <div class="align-items-center" style="margin: 4em;">
         <div class="text-center">
             <h1 id="main-first" style="font-family: 'Overpass', sans-serif;">gabriel ionescu</h1>
             <h2 id="main-second" style="font-family: 'Overpass', sans-serif;">django developer</h2>
         </div>
-
     </div>
-
-    <span class="container d-flex h-100"></span>
 
 {% endblock %}
