--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -6,42 +6,51 @@ body, html {
 body {
     /* The image used */
     background-color: #FFFFFF;
+    background-image: url("../images/background-base.jpeg");
+    background-attachment: fixed;
 
     /* Full height */
     height: 100%;
 
     /* Center and scale the image nicely */
-    background-position: center;
+    background-position: right top;
     background-repeat: no-repeat;
     background-size: cover;
 
     padding-top: 50px;
-    color: #C4CAC0;
-}
-
-body::after {
-    content: "";
-    background-image: url("../images/background.jpeg");
-    opacity: 0.15;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;
 }
 
 .bg-transparent {
     background: #000000;
     background: -webkit-linear-gradient(to bottom, #FF0080, #FF8C00, #40E0D0);
-    background: linear-gradient(to bottom, rgba(10, 10, 10, 0.9), rgba(10, 10, 10, 0.7), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
+    background: linear-gradient(
+            to bottom,
+            rgba(10, 10, 10, 0.9), rgba(10, 10, 10, 0.7), rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0));
 }
 
-.navbar-dark .navbar-brand,
+.navbar-toggler .navbar-toggler-icon{
+    /*color: #d5ea9f;*/
+    background-image:url("data:image/svg+xml;\
+        charset=utf8,%3Csvg viewBox='0 0 32 32'\
+        xmlns='http://www.w3.org/2000/svg'%3E%3Cpath\
+        stroke='rgb(213, 234, 159)'\
+        stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.navbar-dark .navbar-brand {
+    color: #d5ea9f;
+}
+
 .navbar-dark .navbar-text {
     color: #d5ea9f;
 }
 
 .navbar-dark .navbar-nav .nav-link {
     color: #d5ea9f;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    background-color: #d5ea9f;
+    color: black;
+    border-radius: 0.3em;
 }
