--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -4,15 +4,26 @@
 {% block title %}Detail Project{% endblock %}
 
 {% block content %}
-    <form>
+    <form class="d-flex align-items-center flex-column">
         {% csrf_token %}
         <ul class="list-unstyled">
-            <li><strong>Title: {{ object.title }}</strong></li>
-            <li>Description: {{ object.description }}</li>
+            <div class="text-center mb-5">
+                <h1 style="font-family: 'Overpass', sans-serif; color: #d5ea9f; text-shadow: 0 0 15px black;">
+                    <strong>{{ object.title }}</strong></h1>
+            </div>
+
+            <div class="text-center mb-5" style="margin-left: 10%; margin-right: 10%;">
+                {% for line in object.get_description %}
+                    <ul class="list-group list-unstyled">
+                        <li>{{ line }}</li>
+                    </ul>
+                {% endfor %}
+            </div>
+
             <li>
                 <div class="row">
                     {% for imag in object.images_set.all %}
-                        <span class="col-sm-4">
+                        <span class="col-sm-6 col-md-4 mb-1">
                             <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
                             </span>
                     {% endfor %}
