--- a/src/templates/snippets/nav.html
+++ b/src/templates/snippets/nav.html
@@ -1,10 +1,10 @@
-<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-transparent">
-        <a class="navbar-brand" href="{% url 'home' %}">Home</a>
-    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-transparent">
+    <a class="navbar-brand" href="{% url 'home' %}">Home</a>
+    <button class="navbar-toggler p-0 border-0" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="navbar-collapse offcanvas-collapse">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'projects:project_list' %}">Projects list</a>
