--- a/src/static/css/base.css
+++ b/src/static/css/base.css
@@ -29,7 +29,6 @@ body {
 }
 
 .navbar-toggler .navbar-toggler-icon{
-    /*color: #d5ea9f;*/
     background-image:url("data:image/svg+xml;\
         charset=utf8,%3Csvg viewBox='0 0 32 32'\
         xmlns='http://www.w3.org/2000/svg'%3E%3Cpath\
@@ -50,7 +49,15 @@ body {
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-    background-color: #d5ea9f;
-    color: black;
+    background: linear-gradient(
+            to bottom,
+            rgba(256, 256, 256, 0.7), rgba(70, 89, 18, 0.9));
+    color: white;
     border-radius: 0.3em;
+}
+
+.nav-custom {
+    background: linear-gradient(
+            to bottom,
+            rgba(10, 10, 10, 0.4), rgba(0, 0, 0, 0.1));
 }
