--- a/src/templates/projects/cv_create.html
+++ b/src/templates/projects/cv_create.html
@@ -1,16 +1,24 @@
-{% extends 'base.html' %}
+{% extends 'base_list.html' %}
 {% load staticfiles %}
 {% load crispy_forms_tags %}
 
 {% block title %}New CV{% endblock %}
 
-{% block content %}
-    <br>
-    <h3>Add CV</h3>
-    <form method="POST" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form|crispy }}
-        <input class="btn btn-success" type="submit" name="submit" value="Add CV" />
-        <a class="btn btn-danger " href="{% url 'projects:cv_list' %}">Cancel</a>
-    </form>
+{% block list_title %}Add CV{% endblock %}
+
+{% block list_content %}
+    <div class="row">
+        <div class="col-md-2 col-lg-4"></div>
+        <div class="col-md-8 col-lg-4 mb-3" style="background: rgba(70, 89, 18, 0.08); border-radius: 0.5em; margin: 0.5rem;">
+            <div class="m-3">
+            <form method="POST" enctype="multipart/form-data">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <input class="btn btn-success" type="submit" name="submit" value="Add CV" />
+                <a class="btn btn-danger " href="{% url 'projects:cv_list' %}">Cancel</a>
+            </form>
+        </div>
+        <div class="col-md-2 col-lg-4"></div>
+    </div>
+
 {% endblock %}
