--- a/src/templates/projects/project_detail.html
+++ b/src/templates/projects/project_detail.html
@@ -1,40 +1,38 @@
-{% extends 'base.html' %}
+{% extends 'base_list.html' %}
 {% load staticfiles %}
 
 {% block title %}Detail Project{% endblock %}
 
-{% block content %}
-    <form class="d-flex align-items-center flex-column">
-        {% csrf_token %}
-        <ul class="list-unstyled">
-            <div class="text-center mb-5">
-                <h1 style="font-family: 'Overpass', sans-serif; color: #d5ea9f; text-shadow: 0 0 15px black;">
-                    <strong>{{ object.title }}</strong></h1>
-            </div>
 
-            <div class="text-center mb-5" style="margin-left: 10%; margin-right: 10%;">
-                {% for line in object.get_description %}
-                    <ul class="list-group list-unstyled">
-                        <li>{{ line }}</li>
-                    </ul>
-                {% endfor %}
-            </div>
+<form class="align-items-center">
+    {% csrf_token %}
+    {% block list_title %}{{ object.title }}{% endblock %}
 
-            <li>
-                <div class="row">
-                    {% for imag in object.images_set.all %}
-                        <span class="col-sm-6 col-md-4 mb-1">
-                            <img src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
-                            </span>
-                    {% endfor %}
-                </div>
-            </li>
-        </ul>
-    </form>
-    {% if user.is_authenticated %}
-        <a class="btn btn-success" href="{% url 'projects:project_update' object.slug %}">Update project</a>
-        <a class="btn btn-danger" href="{% url 'projects:project_delete' object.slug %}">Delete project</a>
-        <hr>
-    {% endif %}
-    <a class="btn btn-secondary" href="{% url 'projects:project_list' %}">Back</a>
-{% endblock %}
+    {% block list_content %}
+        <div class="text-center mb-5">
+            {% for line in object.get_description %}
+                <ul class="list-group list-unstyled">
+                    <li>{{ line }}</li>
+                </ul>
+            {% endfor %}
+        </div>
+
+        <div class="row">
+            {% for imag in object.images_set.all %}
+                <span class="col-md-6 mb-3">
+                    <img class="card-img"  src="{{ imag.image.url }}" width='100%' alt="{{ imag.image.url }}">
+                    </span>
+            {% endfor %}
+        </div>
+
+        {% if user.is_authenticated %}
+            <a class="btn btn-success" href="{% url 'projects:project_update' object.slug %}">Update project</a>
+            <a class="btn btn-danger" href="{% url 'projects:project_delete' object.slug %}">Delete project</a>
+            <hr>
+        {% endif %}
+<a class="btn btn-secondary" href="{% url 'projects:project_list' %}">Back</a>
+
+    {% endblock %}
+</form>
+
+
